@@ -1,3 +1,8 @@
+2006-01-25  Guillem Jover  <guillem.jover@nokia.com>
+
+	* launcher/launcher.c (main): Move signal setup and restore to ...
+	(sigs_init, sigs_restore): ... here. New functions.
+
 2006-01-23  Guillem Jover  <guillem.jover@nokia.com>
 
 	* launcher/launcher.c (invoked_get_magic): Mask and check the magic
